# neuralDigits

./: .gitignore  CMakeLists.txt  Data.h  Makefile  main  main.cpp  main_test.cpp  mnist_loader.cpp  mnist_loader.h  network.cpp  network.h  pythonData.h
